# LLM-RBDO

./: .env.example  .gitignore  README.md  pyproject.toml
Case_Study1/: Compare_additional_points_numbers.py  Compare_additional_points_std.py  Compare_historical_records_numbers.py  Compare_prompts.py  Compare_tempurature.py  Compare_top_p.py  FORM.py  LLM_Kriging.py  LLM_True_Constraint.py  Lhs.py  SEGA_Kriging.py  SEGA_Ture_constraint.py  multy_cons_2D.csv
Case_Study2/: FORM.py  LLM_Kriging.py  LLM_Ture_constraint.py  Lhs.py  SEGA_Kriging.py  SEGA_Ture_constraint.py  car_crash.csv
Case_Study3/: LLM_Kriging.py  Lhs.py  SEGA.py  SEGA_Kriging.py  nozzle.py  simulation_results.csv
Scripts/: api_client.py  llm_ops.py
